<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/flDrawingViewContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:padding="1dp"
        android:background="@drawable/background_layout"
        app:layout_constraintBottom_toTopOf="@id/llColorPalate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/background_image">
        </ImageView>

        <com.example.myapplication.DrawingView
            android:id="@+id/drawingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80ffffff">

        </com.example.myapplication.DrawingView>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/llColorPalate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/flDrawingViewContainer"
        app:layout_constraintBottom_toTopOf="@id/llActionButtons"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:onClick="paintClicked"
            android:contentDescription="@string/color_pallet"
            android:background="@color/skin"
            android:src="@drawable/palletnormal"
            android:tag="@color/skin">
        </ImageButton>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:onClick="paintClicked"
            android:contentDescription="@string/black"
            android:background="@color/black"
            android:src="@drawable/palletnormal"
            android:tag="@color/black">
        </ImageButton>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:onClick="paintClicked"
            android:contentDescription="@string/skin"
            android:background="@color/red"
            android:src="@drawable/palletnormal"
            android:tag="@color/red">
        </ImageButton>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:onClick="paintClicked"
            android:contentDescription="@string/skin"
            android:background="@color/blue"
            android:src="@drawable/palletnormal"
            android:tag="@color/blue">
        </ImageButton>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:onClick="paintClicked"
            android:contentDescription="@string/skin"
            android:background="@color/lollipop"
            android:src="@drawable/palletnormal"
            android:tag="@color/lollipop">
        </ImageButton>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:onClick="paintClicked"
            android:contentDescription="@string/skin"
            android:background="@color/yellow"
            android:src="@drawable/palletnormal"
            android:tag="@color/yellow">
        </ImageButton>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:onClick="paintClicked"
            android:contentDescription="@string/skin"
            android:background="@color/random"
            android:src="@drawable/palletnormal"
            android:tag="@color/random">
        </ImageButton>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:onClick="paintClicked"
            android:contentDescription="@string/skin"
            android:background="@color/white"
            android:src="@drawable/palletnormal"
            android:tag="@color/white">
        </ImageButton>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llActionButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/galleryBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_gallery"
            android:contentDescription="@string/galleryBtn"
            android:scaleType="fitXY"
            android:layout_margin="5dp">

        </ImageButton>

        <ImageButton
            android:id="@+id/undoBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_undo"
            android:contentDescription="@string/undoBtn"
            android:scaleType="fitXY"
            android:layout_margin="5dp">

        </ImageButton>

        <ImageButton
            android:id="@+id/brushSizeBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/paint_brush"
            android:contentDescription="@string/brushimage"
            android:scaleType="fitXY"
            android:layout_margin="5dp">

        </ImageButton>

        <ImageButton
            android:id="@+id/saveBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_save"
            android:contentDescription="@string/save"
            android:scaleType="fitXY"
            android:layout_margin="5dp">

        </ImageButton>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>